--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -10,10 +10,10 @@
 
 .promo__wrapper {
   max-width: 1400px;
-  height: 878px;
+  height: 864px;
   margin: auto;
   display: flex;
-  margin-top: -100px;
+  margin-top: -120px;
   padding: 14px 18px 0;
 
 
@@ -49,7 +49,7 @@
   background-position: -8px -82px;
   background-repeat: no-repeat;
   padding-top: 60px;
-  margin-top: 200px;
+  margin-top: 184px;
 }
 
 .promo__button {
@@ -100,7 +100,7 @@
 }
 
 .promo__text {
-  margin-top: 250px;
+  margin-top: 234px;
   min-width: 785px;
   position: relative;
   z-index: 10;
@@ -159,13 +159,13 @@
 
 @media (max-width: $tablet-width) {
   .promo__wrapper {
-    height: 699px;
+    height: 672px;
     padding-left: 18px;
     padding-right: 18px;
   }
 
   .promo__text {
-    margin-top: 151px;
+    margin-top: 124px;
     margin-left: 74px;
 
     & p {
@@ -184,7 +184,7 @@
 
   .promo__image {
     position: relative;
-    margin-top: 66px;
+    margin-top: 40px;
     right: -10%;
 
     & img {
@@ -245,9 +245,9 @@
   .promo__wrapper {
     flex-direction: column-reverse;
     align-items: center;
-    height: 617px;
+    height: 590px;
     margin-top: 0;
-    padding-top: 0;
+    padding-top: 26px;
   }
 
   .promo__image {
